site/api/4.02/index_modules.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.02</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Index of modules</a></div><ul></ul></nav></header>

<h1>Index of modules</h1>
<table>
<tbody><tr><td align="left"><br>A</td></tr>
<tr><td><a href="Arg.html">Arg</a> </td>
<td><div class="info">
Parsing of command line arguments.
</div>
</td></tr>
<tr><td><a href="Arith_status.html">Arith_status</a> </td>
<td><div class="info">
Flags that control rational arithmetic.
</div>
</td></tr>
<tr><td><a href="StdLabels.Array.html">Array</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Array.html">Array</a> </td>
<td><div class="info">
Array operations.
</div>
</td></tr>
<tr><td><a href="Bigarray.Array1.html">Array1</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
One-dimensional arrays.
</div>
</td></tr>
<tr><td><a href="Bigarray.Array2.html">Array2</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
Two-dimensional arrays.
</div>
</td></tr>
<tr><td><a href="Bigarray.Array3.html">Array3</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
Three-dimensional arrays.
</div>
</td></tr>
<tr><td><a href="ArrayLabels.html">ArrayLabels</a> </td>
<td><div class="info">
Array operations.
</div>
</td></tr>
<tr><td align="left"><br>B</td></tr>
<tr><td><a href="Big_int.html">Big_int</a> </td>
<td><div class="info">
Operations on arbitrary-precision integers.
</div>
</td></tr>
<tr><td><a href="Bigarray.html">Bigarray</a> </td>
<td><div class="info">
Large, multi-dimensional, numerical arrays.
</div>
</td></tr>
<tr><td><a href="Buffer.html">Buffer</a> </td>
<td><div class="info">
Extensible buffers.
</div>
</td></tr>
<tr><td><a href="StdLabels.Bytes.html">Bytes</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Bytes.html">Bytes</a> </td>
<td><div class="info">
Byte sequence operations.
</div>
</td></tr>
<tr><td><a href="BytesLabels.html">BytesLabels</a> </td>
<td><div class="info">
Byte sequence operations.
</div>
</td></tr>
<tr><td align="left"><br>C</td></tr>
<tr><td><a href="Callback.html">Callback</a> </td>
<td><div class="info">
Registering OCaml values with the C runtime.
</div>
</td></tr>
<tr><td><a href="CamlinternalFormat.html">CamlinternalFormat</a> </td>
<td></td></tr>
<tr><td><a href="CamlinternalFormatBasics.html">CamlinternalFormatBasics</a> </td>
<td><div class="info">
</div>
</td></tr>
<tr><td><a href="CamlinternalLazy.html">CamlinternalLazy</a> </td>
<td><div class="info">
Run-time support for lazy values.
</div>
</td></tr>
<tr><td><a href="CamlinternalMod.html">CamlinternalMod</a> </td>
<td><div class="info">
Run-time support for recursive modules.
</div>
</td></tr>
<tr><td><a href="CamlinternalOO.html">CamlinternalOO</a> </td>
<td><div class="info">
Run-time support for objects and classes.
</div>
</td></tr>
<tr><td><a href="Char.html">Char</a> </td>
<td><div class="info">
Character operations.
</div>
</td></tr>
<tr><td><a href="Complex.html">Complex</a> </td>
<td><div class="info">
Complex numbers.
</div>
</td></tr>
<tr><td><a href="Condition.html">Condition</a> </td>
<td><div class="info">
Condition variables to synchronize between threads.
</div>
</td></tr>
<tr><td align="left"><br>D</td></tr>
<tr><td><a href="Digest.html">Digest</a> </td>
<td><div class="info">
MD5 message digest.
</div>
</td></tr>
<tr><td><a href="Dynlink.html">Dynlink</a> </td>
<td><div class="info">
Dynamic loading of object files.
</div>
</td></tr>
<tr><td align="left"><br>E</td></tr>
<tr><td><a href="Event.html">Event</a> </td>
<td><div class="info">
First-class synchronous communication.
</div>
</td></tr>
<tr><td align="left"><br>F</td></tr>
<tr><td><a href="Filename.html">Filename</a> </td>
<td><div class="info">
Operations on file names.
</div>
</td></tr>
<tr><td><a href="Format.html">Format</a> </td>
<td><div class="info">
Pretty printing.
</div>
</td></tr>
<tr><td align="left"><br>G</td></tr>
<tr><td><a href="Gc.html">Gc</a> </td>
<td><div class="info">
Memory management control and statistics; finalised values.
</div>
</td></tr>
<tr><td><a href="Bigarray.Genarray.html">Genarray</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td></td></tr>
<tr><td><a href="Genlex.html">Genlex</a> </td>
<td><div class="info">
A generic lexical analyzer.
</div>
</td></tr>
<tr><td><a href="Graphics.html">Graphics</a> </td>
<td><div class="info">
Machine-independent graphics primitives.
</div>
</td></tr>
<tr><td><a href="GraphicsX11.html">GraphicsX11</a> </td>
<td><div class="info">
Additional graphics primitives for the X Windows system.
</div>
</td></tr>
<tr><td align="left"><br>H</td></tr>
<tr><td><a href="MoreLabels.Hashtbl.html">Hashtbl</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.html">Hashtbl</a> </td>
<td><div class="info">
Hash tables and hash functions.
</div>
</td></tr>
<tr><td align="left"><br>I</td></tr>
<tr><td><a href="Int32.html">Int32</a> </td>
<td><div class="info">
32-bit integers.
</div>
</td></tr>
<tr><td><a href="Int64.html">Int64</a> </td>
<td><div class="info">
64-bit integers.
</div>
</td></tr>
<tr><td align="left"><br>L</td></tr>
<tr><td><a href="UnixLabels.LargeFile.html">LargeFile</a> [<a href="UnixLabels.html">UnixLabels</a>]</td>
<td><div class="info">
File operations on large files.
</div>
</td></tr>
<tr><td><a href="Unix.LargeFile.html">LargeFile</a> [<a href="Unix.html">Unix</a>]</td>
<td><div class="info">
File operations on large files.
</div>
</td></tr>
<tr><td><a href="Pervasives.LargeFile.html">LargeFile</a> [<a href="Pervasives.html">Pervasives</a>]</td>
<td><div class="info">
Operations on large files.
</div>
</td></tr>
<tr><td><a href="Lazy.html">Lazy</a> </td>
<td><div class="info">
Deferred computations.
</div>
</td></tr>
<tr><td><a href="Lexing.html">Lexing</a> </td>
<td><div class="info">
The run-time library for lexers generated by <code class="code">ocamllex</code>.
</div>
</td></tr>
<tr><td><a href="StdLabels.List.html">List</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="List.html">List</a> </td>
<td><div class="info">
List operations.
</div>
</td></tr>
<tr><td><a href="ListLabels.html">ListLabels</a> </td>
<td><div class="info">
List operations.
</div>
</td></tr>
<tr><td align="left"><br>M</td></tr>
<tr><td><a href="Weak.Make.html">Make</a> [<a href="Weak.html">Weak</a>]</td>
<td><div class="info">
Functor building an implementation of the weak hash table structure.
</div>
</td></tr>
<tr><td><a href="Set.Make.html">Make</a> [<a href="Set.html">Set</a>]</td>
<td><div class="info">
Functor building an implementation of the set structure
   given a totally ordered type.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.Make.html">Make</a> [<a href="MoreLabels.Set.html">MoreLabels.Set</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Map.Make.html">Make</a> [<a href="MoreLabels.Map.html">MoreLabels.Map</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.Make.html">Make</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Map.Make.html">Make</a> [<a href="Map.html">Map</a>]</td>
<td><div class="info">
Functor building an implementation of the map structure
   given a totally ordered type.
</div>
</td></tr>
<tr><td><a href="Hashtbl.Make.html">Make</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
Functor building an implementation of the hashtable structure.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Hashtbl.MakeSeeded.html">MakeSeeded</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.MakeSeeded.html">MakeSeeded</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
Functor building an implementation of the hashtable structure.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Map.html">Map</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Map.html">Map</a> </td>
<td><div class="info">
Association tables over ordered types.
</div>
</td></tr>
<tr><td><a href="Marshal.html">Marshal</a> </td>
<td><div class="info">
Marshaling of data structures.
</div>
</td></tr>
<tr><td><a href="MoreLabels.html">MoreLabels</a> </td>
<td><div class="info">
Extra labeled libraries.
</div>
</td></tr>
<tr><td><a href="Mutex.html">Mutex</a> </td>
<td><div class="info">
Locks for mutual exclusion.
</div>
</td></tr>
<tr><td align="left"><br>N</td></tr>
<tr><td><a href="Nativeint.html">Nativeint</a> </td>
<td><div class="info">
Processor-native integers.
</div>
</td></tr>
<tr><td><a href="Num.html">Num</a> </td>
<td><div class="info">
Operation on arbitrary-precision numbers.
</div>
</td></tr>
<tr><td align="left"><br>O</td></tr>
<tr><td><a href="Obj.html">Obj</a> </td>
<td><div class="info">
Operations on internal representations of values.
</div>
</td></tr>
<tr><td><a href="Oo.html">Oo</a> </td>
<td><div class="info">
Operations on objects
</div>
</td></tr>
<tr><td align="left"><br>P</td></tr>
<tr><td><a href="Parsing.html">Parsing</a> </td>
<td><div class="info">
The run-time library for parsers generated by <code class="code">ocamlyacc</code>.
</div>
</td></tr>
<tr><td><a href="Pervasives.html">Pervasives</a> </td>
<td><div class="info">
The initially opened module.
</div>
</td></tr>
<tr><td><a href="Printexc.html">Printexc</a> </td>
<td><div class="info">
Facilities for printing exceptions and inspecting current call stack.
</div>
</td></tr>
<tr><td><a href="Printf.html">Printf</a> </td>
<td><div class="info">
Formatted output functions.
</div>
</td></tr>
<tr><td align="left"><br>Q</td></tr>
<tr><td><a href="Queue.html">Queue</a> </td>
<td><div class="info">
First-in first-out queues.
</div>
</td></tr>
<tr><td align="left"><br>R</td></tr>
<tr><td><a href="Random.html">Random</a> </td>
<td><div class="info">
Pseudo-random number generators (PRNG).
</div>
</td></tr>
<tr><td><a href="Ratio.html">Ratio</a> </td>
<td><div class="info">
Operation on rational numbers.
</div>
</td></tr>
<tr><td align="left"><br>S</td></tr>
<tr><td><a href="Scanf.html">Scanf</a> </td>
<td><div class="info">
Formatted input functions.
</div>
</td></tr>
<tr><td><a href="Scanf.Scanning.html">Scanning</a> [<a href="Scanf.html">Scanf</a>]</td>
<td></td></tr>
<tr><td><a href="Set.html">Set</a> </td>
<td><div class="info">
Sets over ordered types.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.html">Set</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Printexc.Slot.html">Slot</a> [<a href="Printexc.html">Printexc</a>]</td>
<td></td></tr>
<tr><td><a href="Sort.html">Sort</a> </td>
<td><div class="info">
<span class="deprecated">Sorting and merging lists.
</span></div>
</td></tr>
<tr><td><a href="Stack.html">Stack</a> </td>
<td><div class="info">
Last-in first-out stacks.
</div>
</td></tr>
<tr><td><a href="Random.State.html">State</a> [<a href="Random.html">Random</a>]</td>
<td></td></tr>
<tr><td><a href="StdLabels.html">StdLabels</a> </td>
<td><div class="info">
Standard labeled libraries.
</div>
</td></tr>
<tr><td><a href="Str.html">Str</a> </td>
<td><div class="info">
Regular expressions and high-level string processing
</div>
</td></tr>
<tr><td><a href="Stream.html">Stream</a> </td>
<td><div class="info">
Streams and parsers.
</div>
</td></tr>
<tr><td><a href="String.html">String</a> </td>
<td><div class="info">
String operations.
</div>
</td></tr>
<tr><td><a href="StdLabels.String.html">String</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="StringLabels.html">StringLabels</a> </td>
<td><div class="info">
String operations.
</div>
</td></tr>
<tr><td><a href="Sys.html">Sys</a> </td>
<td><div class="info">
System interface.
</div>
</td></tr>
<tr><td align="left"><br>T</td></tr>
<tr><td><a href="Thread.html">Thread</a> </td>
<td><div class="info">
Lightweight threads for Posix <code class="code">1003.1c</code> and Win32.
</div>
</td></tr>
<tr><td><a href="ThreadUnix.html">ThreadUnix</a> </td>
<td><div class="info">
<span class="deprecated">Thread-compatible system calls.
</span></div>
</td></tr>
<tr><td align="left"><br>U</td></tr>
<tr><td><a href="Unix.html">Unix</a> </td>
<td><div class="info">
Interface to the Unix system.
</div>
</td></tr>
<tr><td><a href="UnixLabels.html">UnixLabels</a> </td>
<td><div class="info">
Interface to the Unix system.
</div>
</td></tr>
<tr><td align="left"><br>W</td></tr>
<tr><td><a href="Weak.html">Weak</a> </td>
<td><div class="info">
Arrays of weak pointers and hash tables of weak pointers.
</div>
</td></tr>
</tbody></table>

<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>